[package]
name = "kvs"
version = "0.1.0"
authors = ["Amidamaru <ardtimeit@gmail.com>"]
edition = "2021"
description = "an in-memory key/value store that passes simple tests and responds to command-line arguments."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^4.4", features = ["derive", "wrap_help"]}

[dev-dependencies]
assert_cmd = "2"
predicates = "3.0"
